side-panel fixed, latest movie images fixed but not aligned

--- a/src/assets/css/owl.carousel.css
+++ b/src/assets/css/owl.carousel.css
@@ -58,7 +58,7 @@ display:none;
 
 /* mouse grab icon */
 .grabbing { 
-    cursor:url(grabbing.png) 8 8, move;
+    /* cursor:url(grabbing.png) 8 8, move; */
 }
 
 /* fix */
